fix: category option alignment style

--- a/src/components/Category/CategoryOption.css
+++ b/src/components/Category/CategoryOption.css
@@ -10,6 +10,7 @@
 
 .CategoryOption span {
   display: flex;
+  align-items: center;
 }
 
 .CategoryOption img,
